# License_plate_Recognization

./: README.md
License_Plate_Recognition/: CMakeLists.txt  SVM.cpp  SVM.h  classify_objects.cpp  classify_objects.h  compare_plate.cpp  compare_plate.h  kNN.cpp  kNN.h  main.cpp  preprocessing.cpp  preprocessing.h  refine.cpp  refine.h
